@@ -1,3 +1,11 @@
+2006-01-17  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/prefs-dialog.c: (row_is_separator), (setup_fonts_dialog),
+	(create_autodetectors_combo), (prefs_dialog_init):
+	
+	Put "Off" at the top of the combo, followed by a separator row.
+	Bug #125723.
+
 2006-01-17  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* lib/widgets/ephy-node-view.c (ephy_node_view_add_column): 
